# HSE-Agent-Systems_2026_homeworks

./: .env.example  .gitignore  README.md  pyproject.toml
lectures/lecture_3/: hw_3.ipynb  practice_3.ipynb  space_mcp_server.py
lectures/lecture_3/hw_3_output/analyses/: Anthropic_FlintK12_prompt.md  Anthropic_claude-opus-4.6.md  Anthropic_claude-sonnet-4.6.md  Anthropic_claude.ai-human-readable.md  Anthropic_old_claude-3.7-sonnet-full-system-message-humanreadable.md  Anthropic_old_claude-4.1-opus-thinking.md  Anthropic_old_claude-4.5-sonnet.md  Anthropic_old_claude-opus-4.5.md  Anthropic_old_claude-sonnet-4.md  Anthropic_raw_claude-opus-4.6-no-tools-raw.md  Anthropic_raw_claude-opus-4.6-raw.md  Anthropic_raw_claude-sonnet-4.6-no-tools-raw.md  Anthropic_raw_claude-sonnet-4.6-raw.md  Anthropic_visualize.md  Google_Gemini_CLI_System.md  Google_NotebookLM-chat.md  Google_ai-studio-build.md  Google_gemini-2.5-flash-image-preview.md  Google_gemini-2.5-pro-guided-learning.md  Google_gemini-2.5-pro-webapp.md  Google_gemini-3-flash.md  Google_gemini-3-pro.md  Google_gemini-workspace.md  (+42 more)
lectures/lecture_3/hw_3_skills_solved/: analysis_report.md  prompt_analysis.md  prompt_generator.md  skills.md
lectures/lecture_3/skills/: distance_calculation.md  object_comparison.md  observation_planning.md  skills.md
lectures/lecture_4/: EVOLUTION.md  agent.py  chunking.py  data_preporation.py  embedder.py  evaluation.py  evaluation_example.ipynb  lance_db.py  retriever.py
lectures/lecture_4/dataset/: test_dataframe.xlsx
src/: config.py  schemas.py  sys.py  token_manager.py  utils.py
(+2 files in other folders)
