[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 120
fix = true

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F401", "F541", "I001"]

[project]
name = "hse-agent-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "httpx>=0.28.0",
    "langchain-openai>=0.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openai-agents>=0.8.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "seaborn>=0.13.2",
    "datasets>=4.4.2",
    "langchain-core>=0.3,<0.4",
    "openpyxl>=3.1.5",
    "mcp>=1.26.0",
    "nest-asyncio>=1.6.0",
    "numexpr>=2.14.1",
    "sympy>=1.14.0",
    "langchain-text-splitters>=0.3.11",
    "lancedb<0.20",
    "tiktoken>=0.12.0",
    "python-levenshtein>=0.27.3",
    "ragas>=0.4.3",
    "pypdf>=5.0.0",
]
